After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710251 - window resize with "window action key" and right mouse button
window resize with "window action key" and right mouse button
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
: 710466 722902 725973 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-10-16 08:51 UTC by Alexander
Modified: 2014-03-09 14:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: don't ignore resize button release event for move/resize actions (878 bytes, patch)
2013-10-16 20:32 UTC, Lionel Landwerlin
committed Details | Review

Description Alexander 2013-10-16 08:51:12 UTC
When window is resized with Alt+<right mouse button> its not released when mouse button is released.

Steps to reproduce (assuming that "window action key" is set to Alt):
1. choose a window, say new terminal window opened.
2. point mouse to it, hold alt and right mouse button. Now window is resized with mouse movement.
3. release alt or mouse button or both.
4. try to move mouse - window continues to resize.

Expected behaviour: after step 3 window have to be released.
Comment 1 Lionel Landwerlin 2013-10-16 20:32:57 UTC
Created attachment 257448 [details] [review]
window: don't ignore resize button release event for move/resize actions

I've been a bit too much restrictive in the condition to process release event.
Does this patch solve your problem?
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-10-16 20:41:27 UTC
Review of attachment 257448 [details] [review]:

Sure.
Comment 3 Florian Müllner 2013-10-19 08:36:51 UTC
*** Bug 710466 has been marked as a duplicate of this bug. ***
Comment 4 Lionel Landwerlin 2013-11-04 13:53:56 UTC
Comment on attachment 257448 [details] [review]
window: don't ignore resize button release event for move/resize actions

Pushed to master and 3.10
Comment 5 Lionel Landwerlin 2013-11-04 13:54:37 UTC
Sorry I forgot to add myself to the CC.
Comment 6 Florian Müllner 2014-01-24 12:57:09 UTC
*** Bug 722902 has been marked as a duplicate of this bug. ***
Comment 7 Florian Müllner 2014-03-09 14:10:37 UTC
*** Bug 725973 has been marked as a duplicate of this bug. ***