window: don't ignore resize button release event for move/resize actions

https://bugzilla.gnome.org/show_bug.cgi?id=710251